--- a/.github/workflows/gen.yaml
+++ b/.github/workflows/gen.yaml
@@ -29,3 +29,7 @@ jobs:
 
       - name: generate
         run: npm run gen
+      - uses: actions/upload-artifact@v3
+        with:
+          name: redocly-html
+          path: docs/index.html
