--- a/.github/workflows/gen.yaml
+++ b/.github/workflows/gen.yaml
@@ -13,6 +13,8 @@ jobs:
   deploy:
 
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
 
@@ -29,7 +31,5 @@ jobs:
 
       - name: generate
         run: npm run gen
-      - uses: actions/upload-artifact@v3
-        with:
-          name: redocly-html
-          path: docs/index.html
+      
+      - uses: stefanzweifel/git-auto-commit-action@v4
