--- a/docs.yaml
+++ b/docs.yaml
@@ -3,11 +3,15 @@ openapi: "3.0.3"
 info:
   title: "Nissmick API"
   version: "0.0.0"
-
+servers:
+  - url: https://nissmick.net/api/v1
+tags:
+  - name: "users"
+    description: "ユーザー関連"
 paths:
-  "/api/v1/hello":
+  "/users/{id}/display_name":
     get:
-      summary: "hello"
+      summary: "display_nameを取得"
       responses:
         "200":
           description: "成功"
@@ -15,4 +19,4 @@ paths:
             application/json:
               schema:
                 type: string
-                example: "hello"
+                example: "nissmick"
