--- a/docs.yaml
+++ b/docs.yaml
@@ -8,10 +8,37 @@ servers:
 tags:
   - name: "users"
     description: "ユーザー関連"
+components:
+  securitySchemes:
+    Bearer:
+      type: http
+      scheme: bearer
+
 paths:
-  "/users/{id}/display_name":
-    get:
-      summary: "display_nameを取得"
+  "/account/signup":
+    
+    post:
+      tags:
+      - "users"
+      summary: "アカウントを作成"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: "ユーザー名"
+                  example: "nissmick"
+                email:
+                  type: string
+                  description: "メールアドレス"
+                  example: "nissmick@example.com"
+                password:
+                  type: string
+                  description: "パスワード"
+                  example: "password"
       responses:
         "200":
           description: "成功"
@@ -19,4 +46,68 @@ paths:
             application/json:
               schema:
                 type: string
-                example: "nissmick"
+                status: "success"
+        "400":
+          description: "失敗"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: "エラーメッセージ"
+                    example: "ユーザー名が既に使用されています"
+  "/account/me":
+    get:
+      tags:
+        - users
+      summary: "自分のアカウント情報を取得"
+      security:
+        - Bearer: []
+      responses:
+        "200":
+          description: "成功"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    description: "ユーザーID"
+                    example: "E5078127-8707-40F9-A19F-DC972A14E6D7"
+                  name:
+                    type: string
+                    description: "ユーザー名"
+                    example: "nissmick"
+                  email:
+                    type: string
+                    description: "メールアドレス"
+                    example: "nissmick@example.com"
+    patch:
+      summary: "自分のアカウント情報を更新"
+      security:
+        - Bearer: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: "ユーザー名"
+                  example: "nissmick"
+                email:
+                  type: string
+                  description: "メールアドレス"
+                  example: "nissmick@example.com"
+      responses:
+        "200":
+          description: "成功"
+          content:
+            application/json:
+              schema:
+                type: string
+                status: "success"
